--- a/provisioning/ansible/roles/container_host/handlers/main.yml
+++ b/provisioning/ansible/roles/container_host/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart Docker Daemon
-  service: name=dockerd state=restarted
+  service: name=docker state=restarted
 
 - name: Stop Docker
   service: name=docker state=stopped
